update dockerfile to hot reload

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,5 +1,5 @@
 # Stage 1: Sử dụng base image Node.js
-FROM node:18-alpine AS base
+FROM node:20-alpine AS base
 
 # Tạo thư mục làm việc
 WORKDIR /usr/src/app
@@ -16,5 +16,5 @@ COPY . .
 # Expose port mà ứng dụng sẽ chạy
 EXPOSE 3001
 
-# Lệnh để chạy ứng dụng
-CMD ["npm", "start"]
+# Lệnh để chạy ứng dụng với nodemon cho hot reload
+CMD ["npm", "run", "dev"]
