--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   backend:
     build:
       context: ./backend
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile.dev
     ports:
       - "3001:3001" # Map port 3001 của host vào 3001 của container
     volumes:
@@ -16,9 +16,12 @@ services:
   frontend:
     build:
       context: ./frontend
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile.dev
     ports:
-      - "8080:80" # Map port 8080 của host vào 80 của container Nginx
+      - "5173:5173" # Map port 5173 của host vào 5173 của container Vite dev server
+    volumes:
+      - ./frontend/src:/usr/src/app/src # Đồng bộ code để dev
+      - ./frontend/public:/usr/src/app/public # Đồng bộ public assets
     depends_on:
       - backend # Đảm bảo backend khởi động trước frontend
     restart: unless-stopped
